--- a/.gitignore
+++ b/.gitignore
@@ -106,3 +106,10 @@ dist
 
 .ds_store
 
+data/journal/WiredTigerLog.0000000001
+data/journal/WiredTigerLog.0000000001
+data/sizeStorer.wt
+data/sizeStorer.wt
+data/WiredTiger.turtle
+data/WiredTiger.wt
+data/diagnostic.data/metrics.interim
