--- a/package.json
+++ b/package.json
@@ -6,8 +6,11 @@
     "env": "^0.0.2",
     "express": "^4.17.1",
     "express-session": "^1.17.2",
+    "jsonwebtoken": "^8.5.1",
     "method-override": "^3.0.0",
     "mongoose": "^5.13.7",
-    "multer": "^1.4.3"
+    "multer": "^1.4.3",
+    "passport": "^0.4.1",
+    "passport-local": "^1.0.0"
   }
 }
