--- a/package.json
+++ b/package.json
@@ -6,6 +6,7 @@
     "env": "^0.0.2",
     "express": "^4.17.1",
     "express-session": "^1.17.2",
+    "express-sessions": "^1.0.6",
     "jsonwebtoken": "^8.5.1",
     "method-override": "^3.0.0",
     "mongoose": "^5.13.7",
